--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.4"
   },
